--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,3 +1,9 @@
+- name: System details
+  debug: msg="{{ item }}"
+  with_items:
+    - "{{ ansible_distribution }}"
+    - "{{ ansible_distribution_version }}"
+    - "{{ ansible_distribution_major_version }}"
 - name: "Set fact: Package manager reinstall command (dnf)"
   set_fact:
     package_manager_reinstall_cmd: dnf reinstall -y
